tests/fixtures/invalid/min_str_float.py
# Cannot call min() with Str, Float
x = min("hello", 1.0)
